Updated to working state

--- a/FolderCleaner/App.config
+++ b/FolderCleaner/App.config
@@ -16,6 +16,9 @@
             <setting name="DaysUntilDeleting" serializeAs="String">
                 <value>60</value>
             </setting>
+            <setting name="PathToUser" serializeAs="String">
+                <value>[Enter here ur Path -> Important with \\ between the words]</value>
+            </setting>
         </FolderCleaner.Properties.Settings>
     </userSettings>
 </configuration>
