--- a/FolderCleaner/Properties/Settings.settings
+++ b/FolderCleaner/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="DaysUntilDeleting" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">60</Value>
     </Setting>
+    <Setting Name="PathToUser" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:\\Users\\akoesters</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
