--- a/FolderCleaner/packages.config
+++ b/FolderCleaner/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Aspose.Imaging" version="23.12.0" targetFramework="net472" />
+  <package id="Aspose.Imaging" version="24.5.0" targetFramework="net472" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Claims" version="4.0.1" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.0.0" targetFramework="net472" />
 </packages>
